--- a/6x01.vcxproj
+++ b/6x01.vcxproj
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build"
-  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -129,12 +128,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)\Studio7Resources\sfxr;$(ProjectDir)\Studio7Resources\SDL2_ttf-2.22.0\include;$(ProjectDir)\Studio5Resources\SDL2-2.0.22\include;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\include;$(ProjectDir)\Studio5Resources\glew-2.1.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\Studio5Resources\SDL2-2.0.22\include;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\include;$(ProjectDir)\Studio5Resources\glew-2.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)\Studio7Resources\SDL2_ttf-2.22.0\x86;$(ProjectDir)\Studio5Resources\SDL2-2.0.22\x86;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\x86;$(ProjectDir)\Studio5Resources\glew-2.1.0\x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\Studio5Resources\SDL2-2.0.22\lib\x86;$(ProjectDir)\Studio5Resources\SDL2-2.0.22\x86;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\lib\x86;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\x86;$(ProjectDir)\Studio5Resources\glew-2.1.0\lib\x86;$(ProjectDir)\Studio5Resources\glew-2.1.0\x86</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
