--- a/Flowers.vcxproj
+++ b/Flowers.vcxproj
@@ -153,15 +153,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)\Studio7Resources\sfxr;$(ProjectDir)\Studio7Resources\SDL2_ttf-2.22.0\include;$(ProjectDir)\Studio5Resources\SDL2-2.0.22\include;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\include;$(ProjectDir)\Studio5Resources\glew-2.1.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\Studio5Resources\SDL2-2.0.22\include;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\include;$(ProjectDir)\Studio5Resources\glew-2.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(ProjectDir)\Studio5Resources\SDL2-2.0.22\lib\x86;$(ProjectDir)\Studio5Resources\SDL2-2.0.22\x86;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\lib\x86;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\x86;$(ProjectDir)\Studio5Resources\glew-2.1.0\lib\x86;$(ProjectDir)\Studio5Resources\glew-2.1.0\x86</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)\Studio7Resources\SDL2_ttf-2.22.0\x86;$(ProjectDir)\Studio5Resources\SDL2-2.0.22\x86;$(ProjectDir)\Studio5Resources\SDL2_image-2.6.1\x86;$(ProjectDir)\Studio5Resources\glew-2.1.0\x86</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
